--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ langchain==0.0.228
 openai==0.27.8
 streamlit==1.24.1
 streamlit_chat==0.1.1
-pymupdf
-chromadb
-tiktoken
+pymupdf==1.22.5
+chromadb==0.3.26
+tiktoken==0.4.0
 google-search-results==2.4.2
