--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-langchain==0.0.228
+langchain==0.0.218
 openai==0.27.8
-streamlit==1.24.1
+streamlit==1.22.0
 streamlit_chat==0.1.1
 pymupdf==1.22.5
-chromadb==0.3.26
+faiss-cpu==1.7.4
 tiktoken==0.4.0
 google-search-results==2.4.2
