--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+g4f==0.0.2.2
 langchain==0.0.218
 openai==0.27.8
 streamlit==1.22.0
@@ -5,4 +6,5 @@ streamlit_chat==0.1.1
 pymupdf==1.22.5
 faiss-cpu==1.7.4
 tiktoken==0.4.0
+tenacity==8.1.0
 google-search-results==2.4.2
